[gd_scene load_steps=4 format=3 uid="uid://hyoci7g4y30p"]

[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_aq3c2"]

[sub_resource type="Gradient" id="Gradient_46srp"]
colors = PackedColorArray(0.564697, 0.366525, 0.243486, 1, 0.756067, 0.455125, 0.355472, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wa33b"]
gradient = SubResource("Gradient_46srp")

[node name="Settings" type="Control"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aq3c2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -271.0
offset_right = 276.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_wa33b")

[node name="Music" type="Label" parent="CenterContainer/Control"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -172.0
offset_right = 48.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "Music"

[node name="MusicButton" type="Button" parent="CenterContainer/Control/Music"]
layout_mode = 0
offset_left = 285.0
offset_top = 17.0
offset_right = 364.0
offset_bottom = 96.0
action_mode = 0

[node name="Sounds" type="Label" parent="CenterContainer/Control"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -44.0
offset_right = 88.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "Sounds"

[node name="SoundButton" type="Button" parent="CenterContainer/Control/Sounds"]
layout_mode = 0
offset_left = 299.0
offset_top = 17.0
offset_right = 378.0
offset_bottom = 96.0
action_mode = 0

[node name="Language" type="Label" parent="CenterContainer/Control"]
layout_mode = 0
offset_left = -162.0
offset_top = 69.0
offset_right = 191.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 76
text = "Language"

[node name="MenuBar" type="MenuBar" parent="CenterContainer/Control/Language"]
layout_mode = 0
offset_right = 353.0
offset_bottom = 252.0

[node name="Close_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 831.0
offset_right = 798.0
offset_bottom = 908.0

[connection signal="pressed" from="CenterContainer/Control/Music/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="CenterContainer/Control/Sounds/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="Close_Button" to="." method="_on_close_button_pressed"]
